Updates AMBE codec to remove redundant tone frame handling that was already being processed within the synthesizer itself.