@@ -19,22 +19,24 @@
 
 package io.github.dsheirer.jmbe.creator;
 
-import com.jcraft.jsch.Session;
 import org.eclipse.jgit.api.CloneCommand;
 import org.eclipse.jgit.api.Git;
-import org.eclipse.jgit.api.TransportConfigCallback;
-import org.eclipse.jgit.lib.ProgressMonitor;
-import org.eclipse.jgit.transport.JschConfigSessionFactory;
-import org.eclipse.jgit.transport.OpenSshConfig;
-import org.eclipse.jgit.transport.SshSessionFactory;
-import org.eclipse.jgit.transport.SshTransport;
-import org.eclipse.jgit.transport.Transport;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.beans.IntrospectionException;
+import java.beans.Introspector;
+import java.io.File;
+import java.io.FilenameFilter;
 import java.io.IOException;
+import java.net.URI;
+import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * Utility for downloading and compiling the JMBE library
@@ -48,7 +50,7 @@ public class JmbeCreator
     {
     }
 
-    public void createLibrary()
+    public Path createLibrary()
     {
         mLog.info("Creating JMBE library ...");
 
@@ -64,31 +66,101 @@ public class JmbeCreator
 
                 mLog.info("Running gradle build script");
                 runGradle(tempDirectory);
+                return moveLibrary(tempDirectory);
             }
             else
             {
                 mLog.warn("Unable to download source code.  JMBE library creation failed");
             }
         }
+
+        return null;
+    }
+
+    private Path moveLibrary(Path directory)
+    {
+        Path libDirectory = directory.resolve("codec").resolve("build").resolve("libs");
+
+        File[] matchingFiles = libDirectory.toFile().listFiles(new FilenameFilter()
+        {
+            @Override
+            public boolean accept(File dir, String name)
+            {
+                return name.matches("jmbe.*\\.jar") || name.matches("codec.*\\.jar");
+            }
+        });
+
+        if(matchingFiles != null && matchingFiles.length == 1)
+        {
+            Path currentDirectory = Paths.get(".");
+            Path library = matchingFiles[0].toPath();
+
+            mLog.info("Attempting to move [" + library.toString() + "] to [" + currentDirectory.toString() + "]");
+
+            try
+            {
+                Files.move(library, currentDirectory);
+                return library;
+            }
+            catch(Exception e)
+            {
+                mLog.error("Error moving compiled library", e);
+            }
+        }
+
+        return null;
     }
 
     private void runGradle(Path directory)
     {
         Path gradleWrapper = directory.resolve("gradlew");
+        Path errorLog = directory.resolve("build_output.log");
 
-        mLog.info("Executing gradle wrapper [" + gradleWrapper.toString() + "]");
-
-        String[] args = new String[1];
-        args[0] = "build";
+        mLog.info("Testing file system creation");
 
         try
         {
-            Runtime.getRuntime().exec(gradleWrapper.toString(), args, directory.toFile());
+            FileSystems.newFileSystem(URI.create("jrt:/"), Collections.emptyMap());
+        }
+        catch(IOException ioe)
+        {
+            mLog.error("Error creating file system", ioe);
+        }
+
+        try
+        {
+            new ProcessBuilder().command("echo $JAVA_HOME").start();
+
+        }
+        catch(Exception e)
+        {
+            mLog.error("Error echoing", e);
+        }
+
+        mLog.info("Executing gradle wrapper [" + gradleWrapper.toString());
+
+        List<String> commandList = new ArrayList<>();
+        commandList.add(gradleWrapper.toString());
+//        commandList.add("wrapper");
+        commandList.add("jar");
+        commandList.add("--stacktrace");
+        commandList.add("--debug");
+        commandList.add("--scan");
+        commandList.add("--no-daemon");
+
+        try
+        {
+            Process process = new ProcessBuilder()
+                .command(commandList)
+                .directory(directory.toFile())
+                .redirectError(errorLog.toFile())
+                .start();
         }
         catch(Exception e)
         {
             mLog.error("Error running gradle wrapper", e);
         }
+
     }
 
     private Path getTempDirectory()
@@ -130,6 +202,11 @@ public class JmbeCreator
     public static void main(String[] args)
     {
         JmbeCreator creator = new JmbeCreator();
-        creator.createLibrary();
+        Path library = creator.createLibrary();
+
+        if(library != null)
+        {
+            mLog.info("Compiled JMBE Library is located here [" + library.toString() + "]");
+        }
     }
 }
